meio caminho andado

--- a/demo/sigaaa.html
+++ b/demo/sigaaa.html
@@ -4,8 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIGAA - Sistema Integrado de Gestão de Atividades Acadêmicas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    olá mundo
+    <div class="tela">
+        <div class="box one">
+            <div class="titulo">
+                <h3>UNILAB - SIGAA -</h3>
+                <p>Sistema Integrado de Gestão de Atividades Acadêmicas</p>
+            </div>
+            <div class="resto"></div>
+
+        </div>
+        <div class="box two">
+            <p class="vermelho">ATENÇÃO!</p>
+            <p class="atencao">O sistema diferencia letras maiúsculas de minúsculas APENAS na senha, portanto ela deve ser digitada da mesma maneira que no cadastro.</p>
+        </div>
+        <div class="box tre">
+            <div class="litelbox sel">
+                <div class="nome">SIGAA</div>
+                <div class="nome2">(Acadêmico)</div>
+            </div>
+            <div class="litelbox">
+                <div class="nome">SIPAC</div>
+                <div class="nome2">(Administrativo)</div>
+            </div>
+            <div class="litelbox">
+                <div class="nome">SIGRH</div>
+                <div class="nome2">(Recursos Humanos)</div>
+            </div>
+            <div class="litelbox">
+                <div class="nome">SIGEleicão</div>
+                <div class="nome2">(Controle de Processos Eleitorais)</div>
+            </div>
+            <div class="litelbox">
+                <div class="nome">SIGAdmin</div>
+                <div class="nome2">(Administração e Comunicação)</div>
+            </div>
+            <div class="litelbox">
+                <div class="nome">MOODLE</div>
+                <div class="nome2">(Ambiente Virtual)</div>
+            </div>
+        </div>
+        <div class="box four">
+            <div class="action">
+                <p>
+                    Perdeu o e-mail de confirmação de cadastro? 
+                </p>
+                <a href="#">
+                    Clique aqui para recuperá-lo.
+                </a>
+            </div>
+            <div class="action">
+                <p>
+                    Esqueceu o login? 
+                </p>
+                <a href="#">
+                    Clique aqui para recuperá-lo.
+                </a>
+            </div>
+            <div class="action">
+                <p>
+                    Esqueceu a senha? 
+                </p>
+                <a href="#">
+                    Clique aqui para recuperá-la.
+                </a>
+            </div>
+        </div>
+        <div class="box five">
+            <div class="infonome">
+                <h3>Entrar no Sistema</h3>
+            </div>
+            <div class="logcard">
+                <div class="inp user">
+                    <p>Usuário:</p>
+                    <input type="text">
+                </div>
+                <div class="inp senha">
+                    <p>Senha:</p>
+                    <input type="text">
+                </div>
+                <button>Entrar</button>
+            </div>
+        </div>
+        <div class="box six">
+            
+        </div>
+        <div class="box"></div> 
+    </div>
 </body>
 </html>
