fechado por hoje

--- a/demo/sigaaa.html
+++ b/demo/sigaaa.html
@@ -89,7 +89,24 @@
             </div>
         </div>
         <div class="box six">
-            
+            <div class="cadastros">
+                <p>Servidor,</p>
+                <p>caso ainda não possua cadastro no SIGAA,clique no link abaixo.</p>
+                <span>A</span>
+                <a href="">Cadastre-se</a>
+            </div>
+            <div class="cadastros">
+                <p>Aluno,</p>
+                <p>caso ainda não possua cadastro no SIGAA,clique no link abaixo.</p>
+                <span>A</span>
+                <a href="">Cadastre-se</a>
+            </div>
+            <div class="cadastros">
+                <p>Familiares,</p>
+                <p>caso ainda não possuam cadastro no SIGAA,clique no link abaixo.</p>
+                <span>A</span>
+                <a href="">Cadastre-se</a>
+            </div>
         </div>
         <div class="box"></div> 
     </div>
