Terminado a fase um

--- a/demo/sigaaa.html
+++ b/demo/sigaaa.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="tela">
+        <div class="acessibilidade"> 
+            <i class="ph ph-person-arms-spread"></i>
+        </div>
         <div class="box one">
             <div class="titulo">
                 <h3>UNILAB - SIGAA -</h3>
@@ -108,7 +111,27 @@
                 <a href="">Cadastre-se</a>
             </div>
         </div>
-        <div class="box"></div> 
+        <div class="box seven">
+            <div class="sb nav">
+                <span>BB</span>
+                <p>Este sistema é melhor visualizado utilizando o </p>
+                <a href="">Mozilla Firefox</a>
+                <p>, para baixá-lo e instalá-lo, </p>
+                <a href="">clique aqui</a>
+            </div>
+            <div class="sb pdf">
+                <span>CC</span>
+                <p>Para visualizar documentos é necessário utilizar o </p>
+                <a href="">Adobe Reader</a>
+                <p>, para baixá-lo e instalá-lo, </p>
+                <a href="">clique aqui</a>
+            </div>
+        </div> 
+        <div class="box eit">
+            <p>SIGAA | Diretoria de Tecnologia da Informação - - | Copyright © 2006-2025 - UNILAB - sigaa4.sigaa4 -   v3.22.20</p>
+        </div>
+
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2"></script>
 </body>
 </html>
