pagina inicial iniciada

--- a/demo/sigaaa.html
+++ b/demo/sigaaa.html
@@ -88,7 +88,7 @@
                     <p>Senha:</p>
                     <input type="text">
                 </div>
-                <button>Entrar</button>
+                <a href="paginaInicial.html"><button>Entrar</button></a>
             </div>
         </div>
         <div class="box six">
