--- a/demo/paginaInicial.html
+++ b/demo/paginaInicial.html
@@ -14,12 +14,26 @@
                 <i class="ph ph-person-arms-spread"></i>
             </div>
             <div class="box one">
-                <div class="titulo">
-                    <h3>UNILAB - SIGAA -</h3>
-                    <p>Sistema Integrado de Gestão de Atividades Acadêmicas</p>
-                </div>
-                <div class="resto"></div>
+                <div class="barradetitulo">
+                        <div id="titulo">
+                            <h3>UNILAB - SIGAA -</h3>
+                            <p>Sistema Integrado de Gestão de Atividades Acadêmicas</p>
+                        </div>
 
+                        <div id="utilarios">
+                            <div id="tamnhhodafonte">
+                                <button id="aumentar">A+ </button>
+                                <button id="diminuir">A- </button>
+                            </div>
+                            <div id="tempodesessao">
+                                <p>Tempo de Sessão: <span>00:17</span></p>
+                            </div>
+                            <button id="sair">SAIR</button>
+                        </div>
+                </div>
+                <div class="painelDoUsuario">
+                    
+                </div>
             </div>
         </div>
 
