--- a/demo/paginaInicial.html
+++ b/demo/paginaInicial.html
@@ -28,11 +28,11 @@
                             <div id="tempodesessao">
                                 <p>Tempo de Sessão: <span>00:17</span></p>
                             </div>
-                            <button id="sair">SAIR</button>
+                            <a href="sigaaa.html"><button id="sair">SAIR</button></a>
                         </div>
                 </div>
                 <div class="painelDoUsuario">
-                    
+
                 </div>
             </div>
         </div>
