--- a/demo/sigaaa.html
+++ b/demo/sigaaa.html
@@ -82,11 +82,11 @@
             <div class="logcard">
                 <div class="inp user">
                     <p>Usuário:</p>
-                    <input type="text">
+                    <input type="text" name="user.login">
                 </div>
                 <div class="inp senha">
                     <p>Senha:</p>
-                    <input type="text">
+                    <input type="password" name="user.senha">
                 </div>
                 <a href="paginaInicial.html"><button>Entrar</button></a>
             </div>
